[package]
name = "rustflexstack"
version = "0.2.2"
edition = "2021"
description = "ETSI C-ITS GeoNetworking and BTP protocol stack in Rust"
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rustflexstack"
path = "src/lib.rs"


[dependencies]
pnet = "0.34.0"
rand = "0.8"
libc = "0.2"
rasn = "0.26"
rasn-compiler = { version = "0.9", optional = true }
sha2 = "0.10"
p256 = { version = "0.13", features = ["ecdsa", "ecdsa-core"] }
ecdsa = { version = "0.16", features = ["signing", "verifying"] }
elliptic-curve = { version = "0.13", features = ["sec1"] }

[build-dependencies]
cc = { version = "1", optional = true }

[features]
cv2x = ["dep:cc"]

[[example]]
name = "cam_sender_receiver"
path = "examples/cam_sender_receiver.rs"

[[example]]
name = "denm_sender_receiver"
path = "examples/denm_sender_receiver.rs"

[[example]]
name = "vam_sender_receiver"
path = "examples/vam_sender_receiver.rs"

[[example]]
name = "generate_certificate_chain"
path = "examples/generate_certificate_chain.rs"

[[example]]
name = "secured_cam_sender_receiver"
path = "examples/secured_cam_sender_receiver.rs"

[[example]]
name = "secured_vam_sender_receiver"
path = "examples/secured_vam_sender_receiver.rs"

[[example]]
name = "bench_cam_tx"
path = "examples/bench_cam_tx.rs"

[[example]]
name = "bench_cam_rx"
path = "examples/bench_cam_rx.rs"

[[example]]
name = "bench_congestion"
path = "examples/bench_congestion.rs"

[[example]]
name = "cv2x_cam_sender_receiver"
path = "examples/cv2x_cam_sender_receiver.rs"
required-features = ["cv2x"]

[[example]]
name = "cv2x_denm_sender_receiver"
path = "examples/cv2x_denm_sender_receiver.rs"
required-features = ["cv2x"]

[[example]]
name = "secured_cv2x_cam_sender_receiver"
path = "examples/secured_cv2x_cam_sender_receiver.rs"
required-features = ["cv2x"]

