[package]
name = "rustflexstack"
version = "0.3.0"
edition = "2021"
description = "ETSI C-ITS GeoNetworking and BTP protocol stack in Rust"
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rustflexstack"
path = "src/lib.rs"


[dependencies]
pnet = "0.34.0"
rand = "0.8"
libc = "0.2"
rasn = "0.26"
rasn-compiler = { version = "0.9", optional = true }
sha2 = "0.10"
p256 = { version = "0.13", features = ["ecdsa", "ecdsa-core"] }
ecdsa = { version = "0.16", features = ["signing", "verifying"] }
elliptic-curve = { version = "0.13", features = ["sec1"] }
ctrlc = { version = "3", optional = true }

[build-dependencies]
cc = { version = "1", optional = true }

[features]
cv2x = ["dep:cc", "dep:ctrlc"]

[[example]]
name = "denm_sender_receiver"
path = "examples/denm_sender_receiver.rs"

[[example]]
name = "generate_certificate_chain"
path = "examples/generate_certificate_chain.rs"

[[example]]
name = "cv2x_denm_sender_receiver"
path = "examples/cv2x_denm_sender_receiver.rs"
required-features = ["cv2x"]

[[example]]
name = "v2x_cli"
path = "examples/v2x_cli.rs"

[[example]]
name = "v2x_cli_cv2x"
path = "examples/v2x_cli_cv2x.rs"
required-features = ["cv2x"]

